--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav>
                     <a href="">Index</a>
                     <a href="cartes.html">Cartes</a>
-                    <a href="">Yugi Muto</a>
+                    <a href="ennemi.html">Antagonistes</a>
                     <!-- <a href=""></a> -->
                 </nav>
             </section>
