--- a/cartes.html
+++ b/cartes.html
@@ -19,86 +19,161 @@
                 <input type="checkbox" id="hamburger">
                 <label id="hamburger-logo" for="hamburger">☰</label>
                 <nav>
-                    <a href="">Index</a>
+                    <a href="index.html">Index</a>
                     <a href="cartes.html">Cartes</a>
-                    <a href="">Yugi Muto</a>
+                    <a href="yugi.html">Yugi Muto</a>
                     <!-- <a href=""></a> -->
                 </nav>
             </section>
         </header>
-        <main class="cartes">
-            <h1>Cartes iconiques</h1>
-            <section class="sect-dbb">
-                <h2>Dragon blanc aux yeux bleu</h2>
-                <img src="./images/dbl.jpg" alt="carte du dragon blanc aux yeux bleu">
-                <p>Seto Kaiba est obsédé par la puissance et la victoire. Il considère le "Dragon Blanc aux Yeux Bleus"
-                    comme la carte la plus puissante du jeu. Seto considère cette carte comme un symbole de suprémacie.
-                    Le
-                    dragon blanc symbolise la determination, l'mabition et la soif de pouvoir de Kaiba</p>
-                <video controls autoplay mute loop>
-                    <source src="./assets/bwd.mp4" type="video/mp4">
-                    Votre navigateur ne supporte pas la lecture de vidéos HTML5.
-                </video>
+        <main>
+            <section class="petit-ecran">
+                <h1>Cartes iconiques</h1>
+                <section class="sect-dbb">
+                    <h2>Dragon blanc aux yeux bleu</h2>
+                    <img src="./images/dbl.jpg" alt="carte du dragon blanc aux yeux bleu">
+                    <p>Seto Kaiba est obsédé par la puissance et la victoire. Il considère le "Dragon Blanc aux Yeux
+                        Bleus"
+                        comme la carte la plus puissante du jeu. Seto considère cette carte comme un symbole de
+                        suprémacie.
+                        Le
+                        dragon blanc symbolise la determination, l'mabition et la soif de pouvoir de Kaiba</p>
+                    <video controls autoplay mute loop>
+                        <source src="./assets/bwd.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture de vidéos HTML5.
+                    </video>
+                </section>
+                <section class="sect-poly">
+                    <h2>Polymérisation</h2>
+                    <img src="./images/poly.jpg" alt="carte polymérisation">
+                    <p>Cette carte incarne l'essence de l'ingéniosité tactique et de la créativité dans le jeu. Elle
+                        transcende
+                        les limites des monstres individuels, permettant la fusion de leurs forces pour invoquer des
+                        créatures
+                        plus imposantes et redoutables. C'est une représentation de l'union des pouvoirs et de la
+                        synergie
+                        entre
+                        les cartes, offrant des opportunités infinies pour des combinaisons surprenantes et des
+                        stratégies
+                        de
+                        jeu innovantes</p>
+                </section>
+                <section class="sect-ubdd">
+                    <h2>Ultime dragon blanc aux yeux bleu</h2>
+                    <img src="./images/ultimedbl.jpg" alt="carte de l'ultime dragon blanc aux yeux bleu">
+                    <p>Pour Seto Kaiba, cette carte représente l'apogée de la puissance, sa vision d'un monstre
+                        légendaire
+                        capable de
+                        dominer tous les autres. La quête de Kaiba pour réunir les trois "Dragons Blancs aux Yeux Bleus"
+                        et
+                        invoquer cet être majestueux
+                        est le reflet de sa détermination inébranlable à atteindre le sommet, à surmonter tous les
+                        obstacles
+                        et
+                        à prouver sa suprématie.</p>
+                    <video controls autoplay mute loop width="400">
+                        <source src="./assets/ubwd.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture de vidéos HTML5.
+                    </video>
+                </section>
+                <section class="sect-obelis">
+                    <h2>Obelisk le tourmenteur</h2>
+                    <img src="./images/obelisk.jpg" alt="carte d'Obelisk le tourmenteur'">
+                    <p>Pour Seto Kaiba, cette carte représente l'apogée de la puissance, sa vision d'un monstre
+                        légendaire
+                        capable de
+                        dominer tous les autres. La quête de Kaiba pour réunir les trois "Dragons Blancs aux Yeux Bleus"
+                        et
+                        invoquer cet être majestueux
+                        est le reflet de sa détermination inébranlable à atteindre le sommet, à surmonter tous les
+                        obstacles
+                        et
+                        à prouver sa suprématie.</p>
+                    <video controls autoplay mute loop width="400">
+                        <source src="./assets/obelisk.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture de vidéos HTML5.
+                    </video>
+                </section>
             </section>
-            <section class="sect-poly">
-                <h2>Polymérisation</h2>
-                <img src="./images/poly.jpg" alt="carte polymérisation">
-                <p>Cette carte incarne l'essence de l'ingéniosité tactique et de la créativité dans le jeu. Elle
-                    transcende
-                    les limites des monstres individuels, permettant la fusion de leurs forces pour invoquer des
-                    créatures
-                    plus imposantes et redoutables. C'est une représentation de l'union des pouvoirs et de la synergie
-                    entre
-                    les cartes, offrant des opportunités infinies pour des combinaisons surprenantes et des stratégies
-                    de
-                    jeu innovantes</p>
+            <section class="grand-ecran">
+                <section class="grand">
+                    <img src="./images/dbl.jpg" alt="carte du dragon blanc aux yeux bleu">
+                    <article class="grand-ecrit">
+                        <h2>Dragon Blanc aux yeux bleu</h2>
+                        <p>Seto Kaiba est obsédé par la puissance et la victoire. Il considère le "Dragon Blanc aux Yeux
+                            Bleus"
+                            comme la carte la plus puissante du jeu. Seto considère cette carte comme un symbole de
+                            suprémacie.
+                            Le
+                            dragon blanc symbolise la determination, l'mabition et la soif de pouvoir de Kaiba</p>
+                    </article>
+                    <video controls autoplay mute loop>
+                        <source src="./assets/bwd.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture de vidéos HTML5.
+                    </video>
+                </section>
+                <section class="triangle">
+                    <section class="bottom1">
+                        <img src="./images/dblzoom.jpg" alt="tete de dragon">
+                    </section>
+                    <section class="up1">
+                        <img src="./images/fusion.jpg" alt="tete de dragon">
+                    </section>
+                    <section class="bottom2">
+                        <img src="./images/dblzoom.jpg" alt="tete de dragon">
+                    </section>
+                    <section class="empty1"></section>
+                    <section class="bottom3">
+                        <img src="./images/dblzoom.jpg" alt="tete de dragon">
+                    </section>
+                    <section class="empty2"></section>
+                </section>
+                <section class="full-triangle">
+                    <img src="./images/3dragonbis.jpg" alt="3 tete de dragon">
+                </section>
+                <section class="grand">
+                    <img src="./images/ultimedbl.jpg" alt="carte de l'ultime dragon blanc aux yeux bleu">
+                    <article class="grand-ecrit">
+                        <h2>Ultime dragon blanc aux yeux bleu</h2>
+                        <p>Pour Seto Kaiba, cette carte représente l'apogée de la puissance, sa vision d'un monstre
+                            légendaire
+                            capable de
+                            dominer tous les autres. La quête de Kaiba pour réunir les trois "Dragons Blancs aux Yeux
+                            Bleus"
+                            et
+                            invoquer cet être majestueux
+                            est le reflet de sa détermination inébranlable à atteindre le sommet, à surmonter tous les
+                            obstacles
+                            et
+                            à prouver sa suprématie.</p>
+                    </article>
+                    <video controls autoplay mute loop width="400">
+                        <source src="./assets/ubwd.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture de vidéos HTML5.
+                    </video>
+                </section>
+                <section class="grand">
+                    <img src="./images/obelisk.jpg" alt="carte d'Obelisk le tourmenteur'">
+                    <article class="grand-ecrit">
+                        <h2>Obelisk le tourmenteur</h2>
+                        <p>Pour Seto Kaiba, cette carte représente l'apogée de la puissance, sa vision d'un monstre
+                            légendaire
+                            capable de
+                            dominer tous les autres. La quête de Kaiba pour réunir les trois "Dragons Blancs aux Yeux
+                            Bleus"
+                            et
+                            invoquer cet être majestueux
+                            est le reflet de sa détermination inébranlable à atteindre le sommet, à surmonter tous les
+                            obstacles
+                            et
+                            à prouver sa suprématie.</p>
+                    </article>
+                    <video controls autoplay mute loop width="400">
+                        <source src="./assets/obelisk.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture de vidéos HTML5.
+                    </video>
+                </section>
             </section>
-            <section class="sect-ubdd">
-                <h2>Ultime dragon blanc aux yeux bleu</h2>
-                <img src="./images/ultimedbl.jpg" alt="carte de l'ultime dragon blanc aux yeux bleu">
-                <p>Pour Seto Kaiba, cette carte représente l'apogée de la puissance, sa vision d'un monstre légendaire
-                    capable de
-                    dominer tous les autres. La quête de Kaiba pour réunir les trois "Dragons Blancs aux Yeux Bleus" et
-                    invoquer cet être majestueux
-                    est le reflet de sa détermination inébranlable à atteindre le sommet, à surmonter tous les obstacles
-                    et
-                    à prouver sa suprématie.</p>
-                <video controls autoplay mute loop width="400">
-                    <source src="./assets/ubwd.mp4" type="video/mp4">
-                    Votre navigateur ne supporte pas la lecture de vidéos HTML5.
-                </video>
-            </section>
-            <section class="sect-obelis">
-                <h2>Obelisk le tourmenteur</h2>
-                <img src="./images/obelisk.jpg" alt="carte d'Obelisk le tourmenteur'">
-                <p>Pour Seto Kaiba, cette carte représente l'apogée de la puissance, sa vision d'un monstre légendaire
-                    capable de
-                    dominer tous les autres. La quête de Kaiba pour réunir les trois "Dragons Blancs aux Yeux Bleus" et
-                    invoquer cet être majestueux
-                    est le reflet de sa détermination inébranlable à atteindre le sommet, à surmonter tous les obstacles
-                    et
-                    à prouver sa suprématie.</p>
-                <video controls autoplay mute loop width="400">
-                    <source src="./assets/obelisk.mp4" type="video/mp4">
-                    Votre navigateur ne supporte pas la lecture de vidéos HTML5.
-                </video>
-            </section>
-        </main>
-        <main class="grand-ecran">
-            <section class="bottom1">
-                <img src="./images/dblzoom.jpg" alt="tete de dragon">
-            </section>
-            <section class="up1">
-                <img src="./images/fusion.jpg" alt="tete de dragon">
-            </section>
-            <section class="bottom2">
-                <img src="./images/dblzoom.jpg" alt="tete de dragon">
-            </section>
-            <section class="empty1"></section>
-            <section class="bottom3">
-                <img src="./images/dblzoom.jpg" alt="tete de dragon">
-            </section>
-            <section class="empty2"></section>
         </main>
         <footer>
             <a href="https://kaiba-corp.forumactif.fr/">Sites amis</a>
