--- a/ennemi.html
+++ b/ennemi.html
@@ -9,21 +9,201 @@
     <link rel="stylesheet" href="fansite.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <section class="yugi">  
-        <img src="./images/yugi.jpg" alt="avatar de Yugi Moto">
-    </section>
-    <section class="pegasus">
-        <img src="./images/pegasus.jpg" alt="avatar de Pegasus">
-    </section>
-    <section class="dartz">
-        <img src="./images/dartz.jpg" alt="avatar de dartz">
-    </section>
-    <section class="noah">
-        <img src="./images/noah.jpg" alt="avatar de noah">
+    <section class="ennemi-fond">
+        <header>
+            <section class="burger-menu">
+                <input type="checkbox" id="hamburger">
+                <label id="hamburger-logo" for="hamburger">☰</label>
+                <nav>
+                    <a href="index.html">Index</a>
+                    <a href="cartes.html">Cartes</a>
+                    <a href="ennemi.html">Ennemi</a>
+                    <!-- <a href=""></a> -->
+                </nav>
+            </section>
+        </header>
+        <main>
+            <section class="little">
+                <h1>Versus</h1>
+                <section>
+                    <h2>Yugi Moto</h2>
+                    <p>Yugi représente un défi constant que Kaiba est déterminé à surmonter. En tant que PDG de Kaiba
+                        Corporation,
+                        il a une fierté immense et considère son talent en duel comme une extension de sa supériorité
+                        intellectuelle. Yugi, avec son alter ego Yami Yugi, devient une cible privilégiée, car il est
+                        l'un
+                        des
+                        rares duellistes capables de rivaliser avec lui.</p>
+                    <section class="yugi">
+                        <img src="./images/yugi2.jpg" alt="avatar de Yugi Moto">
+                    </section>
+                    <h3>Dark magicien</h3>
+                    <p>Yugi et son magicien sombre forment une alliance indissoluble, chaque duel devenant une
+                        démonstration
+                        éclatante de leur synchronicité. Ce lien particulier transcende le monde des cartes, symbolisant
+                        la
+                        force intérieure de Yugi et son engagement inébranlable envers l'amitié et la justice.</p>
+                    <img src="./images/magicien.jpg" alt="carte du magicien sombre">
+                </section>
+                <section>
+                    <h2>Pegasus</h2>
+                    <p>En tant que PDG ambitieux de Kaiba Corporation, voit Pegasus, le créateur du jeu "Duel Monsters",
+                        comme un obstacle à surmonter pour atteindre la suprématie dans le duel. Pegasus, de son côté,
+                        est
+                        souvent dépeint comme manipulateur et intriguant, jouant un rôle clé dans les événements du Duel
+                        Kingdom. Leur relation est marquée par des duels stratégiques et des confrontations tendues,
+                        reflétant les enjeux élevés de la compétition dans cet univers.</p>
+                    <section class="pegasus">
+                        <img src="./images/pegasus.jpg" alt="avatar de Pegasus">
+                    </section>
+                    <h3>Toon world</h3>
+                    <p>"Le Monde des Toons" joue un rôle central dans les duels de Pegasus et reflète son style unique
+                        de
+                        jeu et son côté fantasque. Les créatures Toon, introduites avec cette carte, sont caractérisées
+                        par
+                        leur apparence animée et leur capacité à attaquer directement le joueur adverse sans passer par
+                        les
+                        monstres sur le terrain.</p>
+                    <img src="./images/toon.jpg" alt="carte du monde des toons">
+                </section>
+                <section>
+                    <h2>Dartz</h2>
+                    <p> Dartz, le principal antagoniste de l'arc "La Grande Crise des Orichalques", cherche à utiliser
+                        la
+                        magie des Orichalques pour purifier le monde en éliminant l'égoïsme humain. Kaiba, en tant que
+                        duelliste déterminé et pragmatique, s'oppose à Dartz, considérant ses plans comme une menace à
+                        la
+                        liberté individuelle. </p>
+                    <section class="dartz">
+                        <img src="./images/dartz.jpg" alt="avatar de dartz">
+                    </section>
+                    <h3>Orichalcos</h3>
+                    <p>"Orichalcos Shunoros" pour Dartz est un symbole de son désir de remodeler le monde et de
+                        restaurer
+                        l'harmonie. L'utilisation de "Orichalcos
+                        Shunoros" est un élément central dans sa tentative de redéfinir la réalité selon sa vision
+                        idéalisée.</p>
+                    <img src="./images/orichalque.jpg" alt="carte Orichalcos Shunoros">
+                </section>
+                <section>
+                    <h2>Noah</h2>
+                    <p>Noah, cherchant à isoler Seto et sa sœur Mokuba, les piège dans un monde virtuel. Kaiba,
+                        intrépide et
+                        résolu, doit non seulement survivre dans cet environnement numérique hostile mais aussi
+                        affronter
+                        les démons de son passé. Leur relation complexe est explorée à travers des duels virtuels et des
+                        révélations sur leur histoire familiale, mettant en lumière les conflits et les émotions
+                        profondes
+                        entre les deux frères.</p>
+                    <section class="noah">
+                        <img src="./images/noah2.jpg" alt="avatar de noah">
+                    </section>
+                    <h3>Shinato</h3>
+                    <p>"Shinato, Roi de la Fusion" est liée à la
+                        quête de Noah pour surmonter sa condition virtuelle et revenir à la réalité. Symbole
+                        de son désir profond de transcender les barrières entre le monde virtuel et le monde réel.
+                        "Shinato, Roi de la Fusion" est le symbole de son aspiration à
+                        retrouver son existence physique.</p>
+                    <img src="./images/shinato.jpg" alt="carte Shinato, King of a Higher Plane">
+                </section>
+            </section>
+            <section class="big">
+                <section class="yugi-big">
+                    <h2>Yugi Yami</h2>
+                    <p>Yugi représente un défi constant que Kaiba est déterminé à surmonter. Kaiba considère son talent
+                        en duel comme une extension de sa supériorité. Yugi, avec son alter ego Yami Yugi, devient une
+                        cible privilégiée, car il est l'un des rares duellistes capables de rivaliser.</p>
+                    <img src="./images/bigYugi.jpg" alt="Yugi Yami">
+                </section>
+                <section class="pegasus-big">
+                    <h2>Pegasus</h2>
+                    <p>Kaiba voit Pegasus, le créateur du jeu "Duel Monsters",
+                        comme un obstacle à surmonter pour atteindre la suprématie dans le duel. Leur relation est
+                        marquée par des duels stratégiques et des confrontations tendues,
+                        reflétant les enjeux élevés de la compétition dans cet univers.</p>
+                    <img src="./images/bigpegasus.jpg" alt="Pegasus">
+                </section>
+                <section class="dartz-big">
+                    <h2>Dartz</h2>
+                    <p> Dartz, cherche à utiliser la magie des Orichalques pour purifier le monde en éliminant l'égoïsme
+                        humain. Kaiba, en tant que
+                        duelliste déterminé et pragmatique, s'oppose à Dartz, considérant ses plans comme une menace à
+                        la liberté individuelle. </p>
+                    <img src="./images/bigdartz2.jpg" alt="Dartz">
+                </section>
+                <section class="noah-big">
+                    <h2>Noah</h2>
+                    <p>Noah, cherchant à isoler Seto et sa sœur Mokuba, les piège dans un monde virtuel. Kaiba, doit
+                        affronter les démons de son passé. Leur relation complexe met en lumière les conflits et les
+                        émotions profondes entre les deux frères.</p>
+                    <img src="./images/bignoah.jpg" alt="Noah Kaiba">
+                </section>
+                <section></section>
+                <section></section>
+                <section class="yugi-big">
+                    <h2>Dark Magician</h2>
+                    <p>Yugi et son magicien sombre forment une alliance indissoluble, chaque duel devenant une
+                        démonstration éclatante de leur synchronicité. Ce lien particulier transcende le monde des
+                        cartes, symbolisant
+                        la force intérieure de Yugi et son engagement inébranlable envers l'amitié et la justice.</p>
+                    <img src="./images/bigdarkmagician.jpg" alt="Dark Magician">
+                </section>
+                <section class="pegasus-big">
+                    <h2>Toon World</h2>
+                    <p>"Le Monde des Toons" joue un rôle central dans les duels de Pegasus et reflète son style unique
+                        de jeu et son côté fantasque. Les créatures Toon, introduites avec cette carte, sont
+                        caractérisées par leur apparence animée et leur capacité incroyable</p>
+                    <img src="./images/bigtoonworld.jpg" alt="Toon world">
+                </section>
+                <section class="dartz-big">
+                    <h2>Orichalcos Shunoros</h2>
+                    <p> "Orichalcos Shunoros" pour Dartz est un symbole de son désir de remodeler le monde et de
+                        restaurer l'harmonie. L'utilisation de "Orichalcos Shunoros" est un élément central dans sa
+                        tentative de redéfinir la réalité selon sa vision idéalisée.</p>
+                    <img src="./images/bigoricha.jpg" alt="Dartz">
+                </section>
+                <section class="noah-big">
+                    <h2>"Shinato, Roi de la Fusion"</h2>
+                    <p>"Shinato, Roi de la Fusion" est liée à la quête de Noah pour surmonter sa condition virtuelle et
+                        revenir à la réalité. Symbole de son désir profond de transcender les barrières entre le monde
+                        virtuel et le monde réel.
+                        "Shinato, Roi de la Fusion" est le symbole de son aspiration à retrouver son existence physique.
+                    </p>
+                    <img src="./images/bigshinato.jpg" alt="Shinato">
+                </section>
+            </section>
+        </main>
+        <footer>
+            <h4>Liens utiles et contacts</h4>
+            <section>
+                <a href="https://kaiba-corp.forumactif.fr/">Sites amis</a>
+                <a href="https://twitter.com/official_kaiba?lang=fr">Twitter</a>
+            </section>
+            <section class="contact">
+                <form action="mailto:votre@email.com" method="post" enctype="text/plain">
+                    <section class="contact-nom">
+                        <label for="name">Nom :</label>
+                        <input type="text" id="name" name="name" required>
+
+                        <label for="prenom">Prenom :</label>
+                        <input type="text" id="prenom" name="prenom" required>
+
+                        <label for="email">Email :</label>
+                        <input type="email" id="email" name="email" required>
+                    </section>
+                    <section>
+                        <label for="message">Message :</label>
+                        <textarea id="message" name="message" required></textarea>
+                        <input type="submit" value="Envoyer">
+                    </section>
+                </form>
+            </section>
+        </footer>
     </section>
 </body>
+
 </html>
