--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&display=swap" rel="stylesheet">
+
+    <meta name="description" content="La page de présentation de Seto Kaiba">
+
+    <meta property="og:title" content="Fan page">
+    <meta property="og:description" content="La page de présentation de Seto Kaiba">
+    <meta property="og:image" content="bcgDragon-Kaiba3.png">
+    <meta property="og:url" content="index.html">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Fan page">
+    <meta name="twitter:description" content="La page de présentation de Seto Kaiba">
+    <meta name="twitter:image" content="bcgDragon-Kaiba3.png">
+
+    <meta property="og:title" content="Fan page">
+    <meta property="og:description" content="La page de présentation de Seto Kaiba">
+    <meta property="og:image" content="bcgDragon-Kaiba3.png">
+    <meta property="og:url" content="index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Fan de Kaiba">
 </head>
 
 <body>
