--- a/ennemi.html
+++ b/ennemi.html
@@ -162,7 +162,7 @@
                     <img src="./images/bignoah.jpg" alt="Noah Kaiba">
                 </section>
                 <section></section>
-                <section></section>
+                <!-- <section></section>
                 <section class="yugi-big">
                     <h2>Dark Magician</h2>
                     <p>Yugi et son magicien sombre forment une alliance indissoluble, chaque duel devenant une
@@ -193,7 +193,7 @@
                         "Shinato, Roi de la Fusion" est le symbole de son aspiration à retrouver son existence physique.
                     </p>
                     <img src="./images/bigshinato.jpg" alt="Shinato">
-                </section>
+                </section> -->
             </section>
         </main>
         <footer>
